--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,17 +27,17 @@ jobs:
       source-packages-to-push: './Source/logs/packages.push'
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
-    - name: Setup .NET 7
+      uses: actions/checkout@v4
+    - name: Setup .NET 8
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7.x.x
+        dotnet-version: 8.x.x
     - name: Build setup
       id: build-setup
       run: >
-        dotnet tool update Sundew.Packaging.Tool -g --version 7.8.*
+        dotnet tool update Sundew.Packaging.Tool -g --version 8.8.*
 
-        dotnet tool update CommandlineBatcher -g --version 7.6.*
+        dotnet tool update CommandlineBatcher -g --version 8.6.*
 
         git rev-parse --short=10 HEAD | cb -c ">> $GITHUB_OUTPUT|git-hash={0}{NL}" --batches-stdin
 
@@ -61,6 +61,9 @@ jobs:
         --output-file $GITHUB_OUTPUT
 
         cb match -p "^refs/tags/release[^/]*$ => isReleaseCommand=true" -i "${{ github.ref }}" -of $GITHUB_OUTPUT
+    - name: 'Remove release tag'
+      if: ${{ steps.stage-build.outputs.stage == 'production' }}
+      run: cb --if "${{ steps.stage-build.outputs.isReleaseCommand }} == true" -c "git|push --delete ${{ env.repository }} ${{ github.ref }}"
     - name: Restore
       run: dotnet restore ${{ env.solutionPath }} --verbosity normal -s ${{ env.source }}${{ steps.stage-build.outputs.dev-package-source-if-set }}
     - name: Build
@@ -84,8 +87,9 @@ jobs:
         git config user.name "${{ secrets.BUILD_USERNAME }}"
         git tag -a v.${{ steps.stage-build.outputs.version }} -m "v.${{ steps.stage-build.outputs.version }}"
         git push ${{ env.repository }} v.${{ steps.stage-build.outputs.version }}
-
-        cb --if "${{ steps.stage-build.outputs.isReleaseCommand }} == true" -c "git|push --delete ${{ env.repository }} ${{ github.ref }}"
     - name: 'Await stable package publish'
       if: ${{ steps.stage-build.outputs.stage == 'production' }}
       run: cb -c "spt|await -s ${{ steps.stage-build.outputs.feedSource }} {0}.{2}" -bs NewLine -bvs '=' -bf ${{ env.source-packages-to-push }}
+    - name: 'Summary'
+      run: |
+        echo '### Pushed version: ${{ steps.stage-build.outputs.fullVersion }}' >> $GITHUB_STEP_SUMMARY
