--- a/Source/Sundew.Testing.CodeAnalysis/Sundew.Testing.CodeAnalysis.csproj
+++ b/Source/Sundew.Testing.CodeAnalysis/Sundew.Testing.CodeAnalysis.csproj
@@ -6,11 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="4.7.0" />
-    <PackageReference Include="PolySharp" Version="1.14.0">
+    <PackageReference Include="PolySharp" Version="1.14.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Sundew.Packaging.Publish" Version="10.0.3">
+    <PackageReference Include="Sundew.Base.IO" Version="12.0.2" />
+    <PackageReference Include="Sundew.Packaging.Publish" Version="10.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
