--- a/Source/Sundew.Testing.CodeAnalysis/Sundew.Testing.CodeAnalysis.csproj
+++ b/Source/Sundew.Testing.CodeAnalysis/Sundew.Testing.CodeAnalysis.csproj
@@ -5,16 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.3.1" />
-    <PackageReference Include="PolySharp" Version="1.15.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Sundew.Base.IO" Version="14.0.0" />
-    <PackageReference Include="Sundew.Packaging.Publish" Version="10.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis" />
+    <PackageReference Include="Sundew.Base.IO" />
   </ItemGroup>
 
   <ItemGroup>
