--- a/Source/Sundew.Testing.Performance/Sundew.Testing.Performance.csproj
+++ b/Source/Sundew.Testing.Performance/Sundew.Testing.Performance.csproj
@@ -5,18 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
-    <PackageReference Include="InfluxDB.Client" Version="4.18.0" />
-    <PackageReference Include="PolySharp" Version="1.15.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Sundew.Base.Collections" Version="14.0.0" />
-    <PackageReference Include="Sundew.Base.Primitives" Version="14.0.0" />
-    <PackageReference Include="Sundew.Packaging.Publish" Version="10.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="InfluxDB.Client" />
+    <PackageReference Include="Sundew.Base.Collections" />
+    <PackageReference Include="Sundew.Base.Primitives" />
   </ItemGroup>
 
 </Project>
