--- a/Source/Sundew.Testing/Sundew.Testing.csproj
+++ b/Source/Sundew.Testing/Sundew.Testing.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Contains concepts useful for testing.</Description>
   </PropertyGroup>
 
 </Project>
