--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -86,9 +86,9 @@ jobs:
         '-p:"SppAppendPublishFileLogFormats={PackageId}={DQ}{PackagePath}{DQ}={Version}{NL} > ${{ env.packages-to-push }}"'
         -p:GeneratePackageOnBuild=true
         -p:"PackageOutputPath=${{ steps.stage-build.outputs.nuGetPackagesPath }}"
-    - name: Test
-      working-directory: ${{ env.solutionDir }}
-      run: dotnet test --solution ${{ env.solutionFileName }} --verbosity normal --configuration ${{ steps.stage-build.outputs.buildConfiguration }} --no-build
+    #- name: Test
+    #  working-directory: ${{ env.solutionDir }}
+    #  run: dotnet test --solution ${{ env.solutionFileName }} --verbosity normal --configuration ${{ steps.stage-build.outputs.buildConfiguration }} --no-build
     - name: 'Publish package(s)'
       if: ${{ steps.stage-build.outputs.stage != 'none' }}
       run: cb -c "spt|push -s ${{ steps.stage-build.outputs.pushSource }} -k ${{ steps.stage-build.outputs.apiKey }} -ss ${{ steps.stage-build.outputs.symbolsPushSource }} -sk ${{ steps.stage-build.outputs.symbolsApiKey }} --retries 10 {1}" -bs NewLine -bvs '=' -bf ${{ env.source-packages-to-push }}
