--- a/Source/Directory.Packages.props
+++ b/Source/Directory.Packages.props
@@ -10,9 +10,9 @@
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="10.0.102" />
     <PackageVersion Include="PolySharp" Version="1.15.0" />
     <PackageVersion Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556" />
-    <PackageVersion Include="Sundew.Base.Collections" Version="16.0.0-u20260131-215542-ci" />
-    <PackageVersion Include="Sundew.Base.IO" Version="16.0.0-u20260131-215542-ci" />
-    <PackageVersion Include="Sundew.Base.Primitives" Version="16.0.0-u20260131-215542-ci" />
+    <PackageVersion Include="Sundew.Base.Collections" Version="16.0.0" />
+    <PackageVersion Include="Sundew.Base.IO" Version="16.0.0" />
+    <PackageVersion Include="Sundew.Base.Primitives" Version="16.0.0" />
     <PackageVersion Include="Sundew.Packaging.Publish" Version="10.0.12" />
     <PackageVersion Include="TUnit" Version="1.12.102" />
   </ItemGroup>
